cmake_minimum_required(VERSION 3.6)
project(CPSC_131)

add_subdirectory(Homework_01)
add_subdirectory(Homework_02)
add_subdirectory(Homework_03)
add_subdirectory(Homework_04_01)
add_subdirectory(Homework_04_02)
add_subdirectory(Homework_05_01)
add_subdirectory(Homework_05_02)

add_subdirectory(ClassActivity_20170131)
add_subdirectory(ClassActivity_20170202)
add_subdirectory(ClassActivity_20170214)